kubernetes/apps/observability/blackbox-exporter/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: blackbox-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: vmagent
      toPorts:
        - ports: [{ port: "9115", protocol: TCP }]
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
    - toServices:
        - k8sService: { serviceName: kube-dns, namespace: kube-system }
      toPorts:
        - ports: [{ port: "53", protocol: TCP }]
    - toCIDR: [10.25.13.35/32, 10.25.10.100/32, 10.25.13.33/32]
      toPorts:
        - ports: [{ port: "53", protocol: TCP }]
    - toCIDR: [10.25.20.10/32]
      toPorts:
        - ports: [{ port: "6443", protocol: TCP }]
    - toCIDR: [10.25.20.40/32, 10.25.20.80/32, 1.1.1.1/32]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
    - toCIDR: [9.9.9.9/32]
      toPorts:
        - ports: [{ port: "853", protocol: TCP }]
    - toCIDR: [10.25.13.16/32, 10.25.10.101/32]
      icmps:
        - fields: [{ family: IPv4, type: 8 }]
    - toFQDNs:
        - matchName: vault.monosense.io
      toPorts:
        - ports: [{ port: "8200", protocol: TCP }]
    - toFQDNs:
        - matchName: git.monosense.io
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
